refactor: ボタン名変更

--- a/popup.html
+++ b/popup.html
@@ -22,7 +22,7 @@
   
   <button id="radio-button">Radio</button>
 
-  <button id="gunk-button">Gunk</button>
+  <button id="junk-button">Junk</button>
 </div>
 
 </body>
