refactor: フォルダ構成変更

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<script src="/js/jquery-3.7.1.min.js"></script>
+<script src="/content/jquery-3.7.1.min.js"></script>
 <script src="popup.js"></script>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lo-Fi</title>
-  <link rel="stylesheet" type="text/css" href="css/popup.css">
+  <link rel="stylesheet" type="text/css" href="popup.css">
 </head>
 <body>
 
